gh-3117 Migrate annos to use uuid for assigned to user, rename column